Fully Working Version🥳
- Added more translations
- Added /debug command
- Replaced Match#next(), Match#lose(), Match#win() and their Match#...(BBPlayer) veriants with GameFlow#...()
- Added debug tracing to EVERY single method that wouldn't completely spam the console if it was traced.
- Added advanced debug tracing with info about the caller class (Trace#last())
- Removed the AlgorithmTimer
- Made ScoreBoard.java a little better
- Fixed the brackets bug in the shop
- Fixed most player problems
- Fixed "Your turn is over" message was sent to the wrong player
- Added "It's now your turn!" message
- Added translation info and credits
- Made the player move event also filter movement for OPs, because it skiped if the player has op before
- Added Cord#toString()
- Changed the MatchCommand to work with challenging, so you have to invite players to a 1v1
- Made it TP players to the right cords when the game starts
- Removed the head database thing, because it was never used anyways